поменял вводящее в заблуждение название метода deleteAll и перешел с Single на Completable в нём, убрал java8 в репозитории